--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -25,9 +25,15 @@
 }
 
 .infoCardContainer--vintage {
-    background-color: #EDCFD1
+    background-color: #edcfd1;
+    background-color: #EDCFD1;
 }
 
 .infoCardContainer--metal {
-    background-color: #E1E1E1
+    background-color: #E1E1E1;
+    background-color: #e1e1e1
+}
+
+.infoCardImageContainer{
+
 }
