--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -1,8 +1,9 @@
-.infoCard{
+.infoCardContainer {
     max-width: 1260px;
     margin: 0 auto;
-    padding: 0
+    padding: 0;
 }
+
 .infoCardHeadline {
     font-family: serif;
     font-size: 2.25rem;
@@ -11,19 +12,23 @@
     border: 2px solid black;
     padding: 24px;
 }
+
 .infoCardCallActionContainer :global(.vtex-button) {
     color: white;
     background-color: gray;
     border: transparent;
 }
+
 .infoCardCallActionContainer :global(.vtex-button):hover {
-    color: gray;
-    background-color: white;
+    color: grey;
+    background-color:white;
     border: transparent;
 }
+
 .infoCardContainer--vintage {
-    background-color: #edcfd1
-}
+    background-color: #EDCFD1
+  }
+
 .infoCardContainer--metal {
-    background-color: #e1e1e1
+    background-color: #e1e1e1;
 }
