--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -32,3 +32,7 @@
 .infoCardContainer--metal {
     background-color: #e1e1e1;
 }
+
+.infoCardCallActionContainer :global(.vtex-button):hover{
+    background-color:white;
+}
