--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -23,9 +23,6 @@
     background-color: gray;
     border: transparent;
 }
-.infoCardCallActionContainer :global(.vtex-button):hover {
-    color: grey;
-    border: transparent;
+.infoCardCallActionContainer :global(.vtex-button)::hover {
     background-color:white;
 }
-
