--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -22,8 +22,9 @@
     background-color: gray;
     border: transparent;
 }
+
 .infoCardCallActionContainer :global(.vtex-button):hover {
-    color: grey;
+    color: gray;
+    background-color: white;
     border: transparent;
-    background-color:white;
 }
